@@ -1,0 +1,99 @@
+begin_unit
+begin_package
+DECL|package|org.apache.solr.core
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+package|;
+end_package
+begin_comment
+comment|/**  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|Directory
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|NIOFSDirectory
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|File
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+begin_comment
+comment|/**  * Factory to instantiate {@link org.apache.lucene.store.NIOFSDirectory}  *  **/
+end_comment
+begin_class
+DECL|class|NIOFSDirectoryFactory
+specifier|public
+class|class
+name|NIOFSDirectoryFactory
+extends|extends
+name|DirectoryFactory
+block|{
+annotation|@
+name|Override
+DECL|method|open
+specifier|public
+name|Directory
+name|open
+parameter_list|(
+name|String
+name|path
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+operator|new
+name|NIOFSDirectory
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|path
+argument_list|)
+argument_list|)
+return|;
+block|}
+block|}
+end_class
+end_unit
